--- a/homepage/eventTemplate.hbs
+++ b/homepage/eventTemplate.hbs
@@ -6,8 +6,7 @@
 <script>
     var __data;
     window.onload = () => {
-        __data = document.getElementById("__data").innerHTML;
-        __data = JSON.parse(__data)
+        __data = JSON.parse(document.getElementById("__data").innerHTML);
     }
 </script>
 
