--- a/homepage/layouts/main.hbs
+++ b/homepage/layouts/main.hbs
@@ -42,14 +42,14 @@
                     generateSecurityFluff(4);
                 }).catch((e)=>{
                     console.log(e);
-                    if (e==='CSR_TOKEN_INVALID') window.location = 'https://xtacy.org/';
+                    if (e==='CSR_TOKEN_INVALID') window.location = '/';
                 });
         })()
 
         function getEventData(_eventId) {
             if (_eventId===undefined) throw 'EVTID_INVALID';
             const eventReq = new XMLHttpRequest();
-            eventReq.open('GET', 'https://xtacy.org/register/_eventData/' + _eventId + '/', false);
+            eventReq.open('GET', '/register/_eventData/' + _eventId + '/', false);
             eventReq.send();
 
             if(eventReq.readyState===4 && eventReq.status===200) {
@@ -67,7 +67,7 @@
 
         function getEventHash(type, eventId) {
             const hashReq = new XMLHttpRequest();
-            hashReq.open('POST', 'https://xtacy.org/register/_checksum/', false);
+            hashReq.open('POST', '/register/_checksum/', false);
             hashReq.setRequestHeader('Content-Type', 'application/json');
             hashReq.send(JSON.stringify({ "data": 
                 btoa(JSON.stringify({
