--- a/homepage/partials/footer.hbs
+++ b/homepage/partials/footer.hbs
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="/terms">Terms</a></li>
                 <li><a href="/contact">Contact Us</a></li>
-                <li><a href="/register">Register</a></li>
+                <li><a href="/signup">Register</a></li>
             </ul>
         </div>
     </div>
@@ -34,7 +34,7 @@
                 The annual techno-cultural extravaganza organized by Faculty of Engineering, Jamia Millia Islamia
             </div>
             <div class="collab-imgs">
-                <img src="https://xtacy.org/static/img/collaborators.png" alt=""/>
+                <img src="/static/img/collaborators.png" alt=""/>
             </div>
         </div>
         <p class="dev">Developed with <span role="img" aria-label="love">💛</span> by NAMAK</p>
