--- a/homepage/static/css/Events.css
+++ b/homepage/static/css/Events.css
@@ -141,7 +141,7 @@
     margin: auto 0 auto auto;
     height: 100%;
     padding: 1em;
-    padding-right: 0.5em; 
+    padding-right: 0; 
     justify-self: center;
     align-self: flex-end;
     z-index: 11000;
