--- a/homepage/layouts/main.hbs
+++ b/homepage/layouts/main.hbs
@@ -49,25 +49,27 @@
         function getEventData(_eventId) {
             if (_eventId===undefined) throw 'EVTID_INVALID';
             const eventReq = new XMLHttpRequest();
-            eventReq.open('GET', '/register/_eventData/' + _eventId + '/', false);
+            eventReq.open('GET', '/register/_eventData/' + _eventId + '/', true);
             eventReq.send();
 
-            if(eventReq.readyState===4 && eventReq.status===200) {
-                let eventRes = JSON.parse(eventReq.response);
-                if(eventRes.validation) {
-                    for (let i = 0; i < eventRes.arb; i++) 
-                        eventRes.data = atob(eventRes.data)
-                    eventRes.data = JSON.parse(eventRes.data)
-                    return eventRes.data;
-                } else {
-                    throw 'CSRF_INVALID';
+            return eventReq.onreadystatechange = () => {
+                if(eventReq.readyState===4 && eventReq.status===200) {
+                    let eventRes = JSON.parse(eventReq.response);
+                    if(eventRes.validation) {
+                        for (let i = 0; i < eventRes.arb; i++) 
+                            eventRes.data = atob(eventRes.data)
+                        eventRes.data = JSON.parse(eventRes.data)
+                        return eventRes.data;
+                    } else {
+                        throw 'CSRF_INVALID';
+                    }
                 }
             }
         }
 
         function getEventHash(type, eventId) {
             const hashReq = new XMLHttpRequest();
-            hashReq.open('POST', '/register/_checksum/', false);
+            hashReq.open('POST', '/register/_checksum/', true);
             hashReq.setRequestHeader('Content-Type', 'application/json');
             hashReq.send(JSON.stringify({ "data": 
                 btoa(JSON.stringify({
@@ -75,9 +77,11 @@
                     id: eventId
                 }))
             }));
-
-            if(hashReq.readyState===4 && hashReq.status===200) {
-                return JSON.parse(hashReq.response).checksum;
+            
+            return hashReq.onreadystatechange = () => {
+                if(hashReq.readyState===4 && hashReq.status===200) {
+                    return JSON.parse(hashReq.response).checksum;
+                }
             }
         }
     </script>
