--- a/homepage/contact.hbs
+++ b/homepage/contact.hbs
@@ -5,7 +5,7 @@
 
 {{!-- START PAGE CONTENT --}}
 <section>
-    <div class="Contact">
+    <div class="Contact container">
         <div class="Heading container">
             <h1 class="Title">Contact Us</h1>
             <p class="Subtitle">On this page you will be able to get in touch with us 
