--- a/homepage/static/css/Contact.css
+++ b/homepage/static/css/Contact.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-flow: column;
     width: fit-content;
+    max-width: 800px;
     margin: auto;
     animation: reveal 750ms ease;
 } @keyframes reveal {
