--- a/homepage/register.hbs
+++ b/homepage/register.hbs
@@ -9,13 +9,13 @@
 
         <p>A big ass paragraph about registration</p>
 
-        <button class="button solid" id="login">REGISTER</button>
+        <button class="button solid" id="reg">REGISTER</button>
         {{!-- <form action="#"> --}}
             {{!-- <div class="container center"> --}}
                 {{!-- <input id="name" type="text" class="textbox" placeholder="Name" autocomplete="given-name"> --}}
                 {{!-- <input id="email" type="text" class="textbox" placeholder="Email or Phone" autocomplete="email" required="true"> --}}
                 {{!-- <input id="password" type="password" class="textbox" placeholder="Password" autocomplete="current-password" required="true"> --}}
-                {{!-- <button class="button solid" id="login">Register</button> --}}
+                {{!-- <button class="button solid" id="reg">Register</button> --}}
             {{!-- </div> --}}
         {{!-- </form> --}}
     </div>
@@ -25,9 +25,12 @@
 {{> footer }}
 
 <script>
-    document.getElementById("login").onclick = () => {
-        let checksum = getEventHash('gen', 'any');
-        sessionStorage.setItem( config.hashToken, checksum );
-        window.location = '/register/main?int=gen';
-    }
+    window.onload = () => {
+        getEventHash('gen', 'any', (hash)=>{
+            sessionStorage.setItem( config.hashToken, hash );
+            document.getElementById("reg").onclick = () => {
+                window.location = '/register/main?int=gen';
+            }
+        });
+    }        
 </script>
