--- a/bookings/src/components/css/Tickets.css
+++ b/bookings/src/components/css/Tickets.css
@@ -22,6 +22,8 @@
 }
 .Tickets .form {
     width: fit-content;
+} .Tickets .form .container {
+    padding: 1em 0.5em;
 }
 
 .Tickets #reg {
@@ -94,6 +96,7 @@
 /* Pricing Display */
 .Seats .controls .pricing {
     padding: 1em;
+    margin: 0;
     max-width: 20em;
     display: flex;
     flex-flow: column;
