--- a/homepage/static/css/Global.css
+++ b/homepage/static/css/Global.css
@@ -16,6 +16,7 @@ body {
     text-align: center;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
     animation: body 750ms ease;
 } @keyframes body {
     from { opacity: 0 }
