--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -68,6 +68,7 @@
 <section>
     {{!-- About Us --}}
     <div class="about container">
+        <h3>dont judge, website is under construction</h3>
         <h2>Dominum Nostrum</h2>
         <p class="justify">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lectus enim, 
