--- a/homepage/static/css/Homepage.css
+++ b/homepage/static/css/Homepage.css
@@ -26,7 +26,7 @@ img[class~="mobile"] {
     }
 }
 
-.noLeading {
+.noKerning {
     letter-spacing: -1rem;
     margin-inline-start: 1rem;
     margin-inline-end: 0.75rem;
