--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -18,7 +18,7 @@
         </div>        
         
         <div class="Dates">
-            <h3>25<span class="noLeading">----</span>27</h3>
+            <h3>25<span class="noKerning">----</span>27</h3>
             <h3>March</h3>
         </div>
 
@@ -127,7 +127,7 @@
 <script>
     window.addEventListener("load", () => {
         if(window.innerWidth <= 600)
-            document.getElementById("Alex").setAttribute("data-parallaxify-range", "75");
+            document.getElementById("Alex").setAttribute("data-parallaxify-range", "100");
         $.parallaxify(parallaxConfig);
     });
 </script>
