--- a/homepage/partials/footer.hbs
+++ b/homepage/partials/footer.hbs
@@ -23,6 +23,7 @@
                 <li><a href="/terms">Terms</a></li>
                 <li><a href="/contact">Contact Us</a></li>
                 <li><a href="/signup">Register</a></li>
+                <li><a href="/reach">How to Reach</a></li>
             </ul>
         </div>
     </div>
