--- a/homepage/static/css/Homepage.css
+++ b/homepage/static/css/Homepage.css
@@ -367,3 +367,18 @@ img[class~="mobile"] {
     width: 8em;
     margin: 2em 4em;
 }
+/* ---- MAP ---- */
+.map > *{
+    margin-left:auto;
+    margin-right:auto;
+}
+@media (min-width:800px)
+{
+    #map-mobile{display:none;}
+    #map-desktop{display:block;}
+}
+@media (max-width:800px)
+{
+    #map-mobile{display:block;}
+    #map-desktop{display:none;}
+}
