--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -120,7 +120,10 @@
 <section class="map-container">
     {{!-- Google Map of the Location --}}
     <div class="map">
-
+        <iframe width="60%" height="300" id="map-desktop" src="https://maps.google.com/maps?q=Faculty%20of%20Engineering%20Jamia&t=&z=13&ie=UTF8&iwloc=&output=embed">
+        </iframe>
+        <iframe width="90%" height="300" id="map-mobile" src="https://maps.google.com/maps?q=Faculty%20of%20Engineering%20Jamia&t=&z=13&ie=UTF8&iwloc=&output=embed">
+        </iframe>
     </div>
 </section>
 {{!-- END PAGE CONTENT --}}
