--- a/homepage/static/css/Homepage.css
+++ b/homepage/static/css/Homepage.css
@@ -50,7 +50,7 @@ img[class~="mobile"] {
     grid-column: 2/3;
     grid-row: 1/5;
 
-    z-index: 100;
+    z-index: 250;
     position: relative;
     height: 100%;
     width: 65%;
@@ -103,7 +103,7 @@ img[class~="mobile"] {
     left: 50%;
     top: 35%;
     font-size: 8em;
-    z-index: 100;
+    z-index: 200;
 }
 
 @media (max-width: 800px) {
@@ -277,34 +277,38 @@ img[class~="mobile"] {
 
 .embelishments {
     position: absolute;
-    /* width: 100%; */
     height: 100%;
     left: -1em;
     right: -1em;
     overflow: hidden;
     background-color: #fff;
 }
-.particles {
+.embelishments .particles {
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 100;
 }
-#moon {
+.embelishments #moon {
     position: absolute;
     right: 1em;
     top: 7.5em;
     width: 350px;
-    z-index: 50;
-} #moon img {
+    z-index: 125;
+    filter: drop-shadow(0 30px 25px #ccc);
+} .embelishments #moon img {
     width: 100%;
     height: 100%;
 } @media(max-width: 600px) {
-    #moon {
+    .embelishments #moon {
         display: none;
-        /* right: -7.5em;
-        top: 15em;
-        width: 200px; */
     }
+}
+.embelishments #invert-filter {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 150;
 }
 /* ============================================== */
 
