--- a/homepage/reach.hbs
+++ b/homepage/reach.hbs
@@ -9,12 +9,10 @@
         <p>Xtacy will be held in the Jamia Millia Islamia campus, Faculty of Engineering and Technology on the 25th, 26th and 27th of March</p>
     </div>
 </section>
+
 <section class="map-container">
     <div class="map">
-        <iframe id="map-desktop" src="https://maps.google.com/maps?q=Faculty%20of%20Engineering%20Jamia&t=&z=13&ie=UTF8&iwloc=&output=embed">
-        </iframe>
-        <iframe id="map-mobile" src="https://maps.google.com/maps?q=Faculty%20of%20Engineering%20Jamia&t=&z=13&ie=UTF8&iwloc=&output=embed">
-        </iframe>
+        <iframe height="300px" id="map-desktop" src="https://maps.google.com/maps?q=Faculty%20of%20Engineering%20Jamia&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
     </div>
 </section>
 {{!-- END PAGE CONTENT --}}
