--- a/homepage/static/css/Reach.css
+++ b/homepage/static/css/Reach.css
@@ -1,31 +1,9 @@
-.map > *{
-    margin-left:auto;
-    margin-right:auto;
+.map-container {
+    padding: 0;
+} .map {
+    margin-bottom: 0;
 }
-#map-desktop{
-    width :70%;
-    height:700px;
-}
-#map-mobile{
-    width: 90%;
-    height:400px;
-}
-@media (max-width: 800px)
-{
-    #map-desktop{
-        display:none;
-    }
-    #map-mobile{
-        display:block;
-    }
-}
-
-@media (min-width: 800px)
-{
-    #map-desktop{
-        display:block;
-    }
-    #map-mobile{
-        display:none;
-    }
+.map iframe{
+    border: none;
+    width: 100%;
 }
