--- a/homepage/partials/footer.hbs
+++ b/homepage/partials/footer.hbs
@@ -12,8 +12,8 @@
 
         <div class="social">
             <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Instagram</a></li>
+                <li><a href="https://facebook.com/xtacyorg">Facebook</a></li>
+                <li><a href="https://instagram.com/xtacyorg">Instagram</a></li>
                 <li><a href="#">Twitter</a></li>
             </ul>
         </div>
